--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/sapphirus15">View on GitHub</a>
 
           <h1 id="project_title">Sapphirus15.GitHub.io</h1>
-          <h2 id="project_tagline">Build a Jekyll blog in minutes, without touching the command line.</h2>
+          <h2 id="project_tagline">주요 관심 분야 및 내용 정리</h2>
 
         </header>
     </div>
